# CMake-GTest-Template

./: .gitignore  CMakeLists.txt  README.md
project/: CMakeLists.txt
project/include/: Algo.h
project/src/: Algo.cpp
tests/: CMakeLists.txt
tests/src/: test1.cpp
